# ex_maglev

./: CHANGELOG.md  Makefile  README.md  mix.exs
.github/workflows/: elixir.yml  release.yml
benchmark/: hash.exs
lib/: ex_maglev.ex
native/maglev/: Cargo.toml
native/maglev/src/: atoms.rs  lib.rs  nif.rs
scripts/env/dev/: .env  docker-compose.yml  handler.mk
scripts/env/dev/imgs/base/: Dockerfile
test/: ex_maglev_test.exs  performance_test.exs
test/support/: case.ex
