[package]
name = "maglev"
version = "0.1.0"
authors = ["Maxim Molchanov <m.molchanov@vonmo.com>"]
license = "MIT/Apache-2.0"

[lib]
name = "maglev"
crate-type = ["dylib"]

[dependencies]
libc = "0.2"
rustler = { version = "0.32.1", features = ["nif_version_2_16"]}
maglev = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
